feat: work on calculate logic

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </header>
 
         <div class="screen">
-            <p class="screen__result">0</p>
+            <p class="screen__result" id="result"></p>
         </div>
 
         <div class="keypad" id="keypad">
