feat: key shadows enhancement

--- a/index.html
+++ b/index.html
@@ -57,9 +57,11 @@
 
         <div class="keypad" id="keypad">
             <template id="key-template">
-                <button class="keypad__key">
-                    <span class="keypad__label"></span>
-                </button>
+                <div class="keypad__key">
+                    <button class="keypad__button">
+                        <span class="keypad__label"></span>
+                    </button>
+                </div>
             </template>
         </div>
 
