--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 
 <body class="page">
-    <main class="page__container">
+    <main class="page__container" id="app">
 
         <header class="header">
             <h1 class="header__title">calc</h1>
