--- a/index.html
+++ b/index.html
@@ -2,69 +2,63 @@
 <html class="theme-1" lang="en" dir="ltr">
 
 <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="icon" type="image/png" href="favicon.png"/>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@700&display=swap" rel="stylesheet">
 
-    <!-- Primary Meta Tags -->
-    <title>Calculator app</title>
-    <meta name="title" content="Calculator app">
-    <meta name="description" content="Frontend Mentor challenge solution for: Calculator app">
+  <!-- Primary Meta Tags -->
+  <title>Calculator app</title>
+  <meta name="title" content="Calculator app">
+  <meta name="description" content="Frontend Mentor challenge solution for: Calculator app">
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://john-mirage.github.io/calculator-app/">
-    <meta property="og:title" content="Calculator app">
-    <meta property="og:description" content="Frontend Mentor challenge solution for: Calculator app">
-    <meta property="og:image" content="https://john-mirage.github.io/calculator-app/preview.jpg">
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://john-mirage.github.io/calculator-app/">
+  <meta property="og:title" content="Calculator app">
+  <meta property="og:description" content="Frontend Mentor challenge solution for: Calculator app">
+  <meta property="og:image" content="https://john-mirage.github.io/calculator-app/preview.jpg">
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://john-mirage.github.io/calculator-app/">
-    <meta property="twitter:title" content="Calculator app">
-    <meta property="twitter:description" content="Frontend Mentor challenge solution for: Calculator app">
-    <meta property="twitter:image" content="https://john-mirage.github.io/calculator-app/preview.jpg">
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://john-mirage.github.io/calculator-app/">
+  <meta property="twitter:title" content="Calculator app">
+  <meta property="twitter:description" content="Frontend Mentor challenge solution for: Calculator app">
+  <meta property="twitter:image" content="https://john-mirage.github.io/calculator-app/preview.jpg">
 </head>
 
 <body class="page">
-    <main class="page__container" id="app">
+  <main class="page__container">
 
-        <header class="header">
-            <h1 class="header__title">calc</h1>
-            <div class="switch">
-                <p class="switch__title">theme</p>
-                <div class="switch__button">
-                    <div class="switch__label-list">
-                        <label class="switch__label" for="theme-selector-1">1</label>
-                        <label class="switch__label" for="theme-selector-2">2</label>
-                        <label class="switch__label" for="theme-selector-3">3</label>
-                    </div>
-                    <div class="switch__input-list">
-                        <input class="switch__input" type="radio" value="theme-1" name="theme-selector" id="theme-selector-1" checked>
-                        <input class="switch__input" type="radio" value="theme-2" name="theme-selector" id="theme-selector-2">
-                        <input class="switch__input" type="radio" value="theme-3" name="theme-selector" id="theme-selector-3">
-                    </div>
-                </div>
-            </div>
-        </header>
+    <!-- App -->
+    <app-root></app-root>
 
-        <div class="screen">
-            <p class="screen__result" id="result"></p>
+    <!-- Template | theme button -->
+    <template id="template-theme-switch">
+      <input class="theme-switch__input" type="radio" name="theme-switch" id="theme-switch-input-1" checked>
+      <input class="theme-switch__input" type="radio" name="theme-switch" id="theme-switch-input-2">
+      <input class="theme-switch__input" type="radio" name="theme-switch" id="theme-switch-input-3">
+      <div class="theme-switch__section theme-switch__section--label">
+        <label class="theme-switch__label" for="theme-switch-input-1">1</label>
+        <label class="theme-switch__label" for="theme-switch-input-2">2</label>
+        <label class="theme-switch__label" for="theme-switch-input-3">3</label>
+      </div>
+      <div class="theme-switch__section theme-switch__section--input">
+        <h3 class="theme-switch__title">theme</h3>
+        <div class="theme-switch__track">
+          <div class="theme-switch__handle"></div>
+          <label class="theme-switch__button" for="theme-switch-input-1"></label>
+          <label class="theme-switch__button" for="theme-switch-input-2"></label>
+          <label class="theme-switch__button" for="theme-switch-input-3"></label>
         </div>
+      </div>
+    </template>
 
-        <div class="keypad" id="keypad">
-            <template id="key-template">
-                <button class="keypad__button">
-                    <span class="keypad__label"></span>
-                </button>
-            </template>
-        </div>
+  </main>
 
-    </main>
-    <script type="module" src="/src/main.ts"></script>
+  <script type="module" src="/src/main.ts"></script>
 </body>
 
 </html>
