--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="theme-1" lang="en" dir="ltr">
+<html lang="en" dir="ltr">
 
 <head>
   <meta charset="UTF-8"/>
@@ -37,21 +37,23 @@
 
     <!-- Template | theme button -->
     <template id="template-theme-switch">
-      <input class="theme-switch__input" type="radio" name="theme-switch" id="theme-switch-input-1" checked>
-      <input class="theme-switch__input" type="radio" name="theme-switch" id="theme-switch-input-2">
-      <input class="theme-switch__input" type="radio" name="theme-switch" id="theme-switch-input-3">
-      <div class="theme-switch__section theme-switch__section--label">
-        <label class="theme-switch__label" for="theme-switch-input-1">1</label>
-        <label class="theme-switch__label" for="theme-switch-input-2">2</label>
-        <label class="theme-switch__label" for="theme-switch-input-3">3</label>
-      </div>
-      <div class="theme-switch__section theme-switch__section--input">
-        <h3 class="theme-switch__title">theme</h3>
-        <div class="theme-switch__track">
-          <div class="theme-switch__handle"></div>
-          <label class="theme-switch__button" id="theme-switch-button-1" for="theme-switch-input-1"></label>
-          <label class="theme-switch__button" id="theme-switch-button-2" for="theme-switch-input-2"></label>
-          <label class="theme-switch__button" id="theme-switch-button-3" for="theme-switch-input-3"></label>
+      <div class="theme-switch">
+        <input class="theme-switch__input" type="radio" name="theme-switch" value="theme-1" id="theme-switch-input-1">
+        <input class="theme-switch__input" type="radio" name="theme-switch" value="theme-2" id="theme-switch-input-2">
+        <input class="theme-switch__input" type="radio" name="theme-switch" value="theme-3" id="theme-switch-input-3">
+        <div class="theme-switch__section theme-switch__section--label">
+          <label class="theme-switch__label" for="theme-switch-input-1">1</label>
+          <label class="theme-switch__label" for="theme-switch-input-2">2</label>
+          <label class="theme-switch__label" for="theme-switch-input-3">3</label>
+        </div>
+        <div class="theme-switch__section theme-switch__section--input">
+          <h3 class="theme-switch__title">theme</h3>
+          <div class="theme-switch__track">
+            <div class="theme-switch__handle"></div>
+            <label class="theme-switch__button" id="theme-switch-button-1" for="theme-switch-input-1"></label>
+            <label class="theme-switch__button" id="theme-switch-button-2" for="theme-switch-input-2"></label>
+            <label class="theme-switch__button" id="theme-switch-button-3" for="theme-switch-input-3"></label>
+          </div>
         </div>
       </div>
     </template>
