--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
     <!-- Template | theme button -->
     <template id="template-theme-switch">
       <div class="theme-switch">
-        <input class="theme-switch__input" type="radio" name="theme-switch" value="theme-1" id="theme-switch-input-1">
-        <input class="theme-switch__input" type="radio" name="theme-switch" value="theme-2" id="theme-switch-input-2">
-        <input class="theme-switch__input" type="radio" name="theme-switch" value="theme-3" id="theme-switch-input-3">
+        <input class="theme-switch__input" type="radio" name="theme-switch" value="theme-1">
+        <input class="theme-switch__input" type="radio" name="theme-switch" value="theme-2">
+        <input class="theme-switch__input" type="radio" name="theme-switch" value="theme-3">
         <div class="theme-switch__section theme-switch__section--label">
           <label class="theme-switch__label" for="theme-switch-input-1">1</label>
           <label class="theme-switch__label" for="theme-switch-input-2">2</label>
           <label class="theme-switch__label" for="theme-switch-input-3">3</label>
         </div>
         <div class="theme-switch__section theme-switch__section--input">
-          <h3 class="theme-switch__title">theme</h3>
+          <h2 class="theme-switch__title">theme</h2>
           <div class="theme-switch__track">
             <div class="theme-switch__handle"></div>
             <label class="theme-switch__button" id="theme-switch-button-1" for="theme-switch-input-1"></label>
