--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
           <h2 class="theme-switch__title">theme</h2>
           <div class="theme-switch__track">
             <div class="theme-switch__handle"></div>
-            <label class="theme-switch__button" id="theme-switch-button-1" for="theme-switch-input-1"></label>
-            <label class="theme-switch__button" id="theme-switch-button-2" for="theme-switch-input-2"></label>
-            <label class="theme-switch__button" id="theme-switch-button-3" for="theme-switch-input-3"></label>
+            <label class="theme-switch__button" for="theme-switch-input-1"></label>
+            <label class="theme-switch__button" for="theme-switch-input-2"></label>
+            <label class="theme-switch__button" for="theme-switch-input-3"></label>
           </div>
         </div>
       </div>
